--- a/new_site_notice/index.html
+++ b/new_site_notice/index.html
@@ -15,6 +15,8 @@
         <title>Cdule Disclaimer</title>
         <style>
             @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
+
             html {
                 scroll-behavior: smooth;
             }
@@ -35,12 +37,26 @@
 
             .info {
                 text-align: center;
-                font-size: 2rem;
+                font-size: 1.5rem;
             }
 
             .info span {
                 color: orangered;
                 font-weight: bold;
+            }
+            .info .team {
+                width: 100%;
+                text-align: right;
+                color: aquamarine;
+                font-style: italic;
+                font-family: "Shadows Into Light", cursive;
+                font-weight: 400;
+                font-style: normal;
+                font-size: 1.5em;
+            }
+            .info .regards {
+                width: 100%;
+                text-align: right;
             }
 
             .info a {
@@ -63,12 +79,16 @@
             <br />
             If you have any questions or suggestions, please post
             <a
-                href="https://github.com/shu-vro/cdule/issues"
+                href="https://github.com/shu-vro/cdule/issues/new"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="here"
                 >Here</a
             >
+            <br />
+            <br />
+            <div class="regards">Best Regards</div>
+            <div class="team">- Cdule team</div>
         </div>
         <!--  -->
         <script src="resources/js/main.js" />
